k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: microservices-vs
  namespace: microservices
spec:
  hosts:
    - "banking.127.0.0.1.nip.io"
    
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api-gateway
            port:
              number: 9191

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 80
